--- a/src/main/resources/templates/board/editForm.html
+++ b/src/main/resources/templates/board/editForm.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/nav-css.css}">
     <title>글 수정</title>
     <style>
-        #container { width: 800px; }
+
+        #container {
+            max-width: 940px;
+        }
+
         #form label { display: block; }
         #form input[type=text], #form textarea {
             display: block;
