--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -8,6 +8,10 @@
     <title> 조회 </title>
     <style>
 
+        #container {
+            max-width: 940px;
+        }
+
         #wrapper {
             padding: 30px;
         }
@@ -494,7 +498,7 @@
     </script>
 </head>
 <body>
-<div id="container" class="container-lg">
+<div id="container" class="container">
 
     <nav th:replace="fragment/fragment.html :: nav-fragment">
     </nav>
