--- a/src/main/resources/templates/member/infoForm.html
+++ b/src/main/resources/templates/member/infoForm.html
@@ -51,19 +51,37 @@
     <script>
         $(document).ready(function () {
 
+            // 모든 폼의 input, button 비활성화 및 editBt 활성화
+            $(".form input").attr("disabled", true);
+            $(".form button").css("display", "none")
+            $(".form .editBt").css("display", "block");
+            $("#password").attr("placeholder", "");
 
+            // 회원 정보 수정 버튼 누름
+            $(".editBt").on("click", function () {
+                $(".form .editable").attr("disabled", false);
+                $(".form button").css("display", "block");
+                $(".form .editBt").css("display", "none");
+                $("#password").attr("placeholder", "4 ~ 16자리까지 허용합니다.");
+            })
 
             let loginIdFlag = true;
             let usernameFlag = true;
 
             // 변경 체크를 위한 초기값
             let loginId = $("#loginId").val();
-            let username = $("#username").val();
+            let username;
+            if ($(".isOauth2").val()) {
+                username = $("#oauth2Username").val();
+            } else {
+                username = $("#username").val();
+            }
 
+            // loginId 체크
             $("#duplicateLoginIdCheckBt").on("click", function () {
                 loginId = $("#loginId").val();
 
-                if (loginId == "" || loginId.length > 8) {
+                if (loginId == "" || loginId.length > 16) {
                     alert("유효한 아이디를 입력해 주세요.");
                     return false;
                 }
@@ -87,10 +105,16 @@
                 })
             })
 
-            $("#duplicateUsernameCheckBt").on("click", function () {
-                username = $("#username").val();
+            // username 체크
+            $(".duplicateUsernameCheckBt").on("click", function () {
 
-                if (username == "" || username.length > 8) {
+                if ($(".isOauth2").val()) {
+                    username = $("#oauth2Username").val();
+                } else {
+                    username = $("#username").val();
+                }
+
+                if (username == "" || username.length > 16) {
                     alert("유효한 닉네임을 입력해 주세요.");
                     return false;
                 }
@@ -103,17 +127,18 @@
                     success: function (data) {
                         if (data == true) {
                             alert("이미 사용중인 닉네임 입니다.")
-                            $("#username").removeClass("is-valid");
+                            $(".username").removeClass("is-valid");
                             usernameFlag = false;
                         } else {
                             alert("사용 가능한 닉네임 입니다.")
-                            $("#username").addClass("is-valid");
+                            $(".username").addClass("is-valid");
                             usernameFlag = true;
                         }
                     }
                 })
             })
 
+            // 일반 유저 폼 submit
             $("#form").on("submit", function (event) {
                 event.preventDefault();
 
@@ -124,7 +149,7 @@
                 let password = $("#password").val();
 
                 // 비밀번호 체크
-                if (password.length < 4 || password.length > 12) {
+                if (password.length < 4 || password.length > 16) {
                     $("#password").addClass("is-invalid");
                     return false;
                 }
@@ -139,6 +164,22 @@
                     alert((loginIdFlag ? "닉네임 " : "로그인ID ") + "중복 체크 해주세요");
                 }
             })
+
+            // OAuth2 유저 폼 submit
+            $("#oauth2Form").on("submit", function (event) {
+                event.preventDefault();
+
+                console.log("$(username) " + $("#oauth2Username").val() + " username " + username)
+
+                // 값 변경 확인
+                if ($("#oauth2Username").val() != username) usernameFlag = false;
+
+                if (usernameFlag == true) {
+                    this.submit();
+                } else {
+                    alert("닉네임 중복 체크 해주세요");
+                }
+            })
         })
     </script>
 </head>
@@ -148,47 +189,98 @@
     <nav th:replace="fragment/fragment.html :: nav-fragment">
     </nav>
 
-    <h2> 회원 수정 </h2>
+    <h2 th:if="${isOauth2 != 'true'}"> 회원 정보 </h2>
+    <h2 th:if="${isOauth2 == 'true'}"> 소셜 회원 정보 </h2>
 
     <!-- 로그인ID 와 닉네임은 중복체크를 위해 클라이언트 단에서 유효성 검사를 하긴 함
           -> 새로고침 날아감 때문에 패스워드도 그냥 유효성 검사 함 -->
-    <form th:action action="/home" method="POST" th:object="${member}" id="form" class="form">
+    <form th:if="${isOauth2 != 'true'}"
+          th:action="@{/member/edit}" action="/home" method="POST" th:object="${member}" id="form" class="form">
 
         <label for="loginId" class="col">로그인 ID </label>
         <div class="input-wrapper">
             <input type="text" th:field="*{loginId}" id="loginId" th:errorclass="is-invalid"
-                   placeholder="최대 8자 까지 허용합니다." class="form-control col-6">
+                   placeholder="최대 8자 까지 허용합니다." class="form-control col-6 editable">
             <button id="duplicateLoginIdCheckBt" type="button" class="btn btn-secondary col">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 로그인 ID 입니다.</div>
-            <div class="invalid-feedback"> 로그인 ID 를 입력해 주세요 (최대 8 자)</div>
+            <div class="invalid-feedback"> 로그인 ID 를 입력해 주세요 (최대 16 자)</div>
         </div>
-
 
         <label for="password">비밀번호 </label>
         <div class="input-wrapper">
             <input type="password" id="password" th:field="*{password}" th:errorclass="is-invalid"
-                   placeholder="4 ~ 12자리 까지 허용합니다." class="form-control">
-            <div class="invalid-feedback"> 비밀번호를 입력해 주세요 (4 ~ 12 자)</div>
+                    class="form-control editable">
+            <div class="invalid-feedback"> 비밀번호를 입력해 주세요 (4 ~ 16 자)</div>
         </div>
 
 
         <label for="username">닉네임 </label>
         <div class="input-wrapper">
             <input type="text" th:field="*{username}" id="username" th:errorclass="is-invalid"
-                   placeholder="최대 8자 까지 허용합니다." class="form-control">
-            <button id="duplicateUsernameCheckBt" type="button" class="btn btn-secondary">
+                   placeholder="최대 20자 까지 허용합니다." class="form-control username editable">
+            <button class="duplicateUsernameCheckBt btn btn-secondary" type="button">
                 중복확인
             </button>
             <div class="valid-feedback"> 사용 가능한 닉네임 입니다.</div>
-            <div class="invalid-feedback"> 닉네임을 입력해 주세요 (최대 8 자)</div>
+            <div class="invalid-feedback"> 닉네임을 입력해 주세요 (최대 16 자)</div>
         </div>
 
+        <label for="email">이메일 </label>
+        <div class="input-wrapper">
+            <input type="text" id="email" th:field="*{email}" th:errorclass="is-invalid"
+                   placeholder="최대 30자 까지 허용합니다." class="form-control editable">
+            <div class="invalid-feedback"> 유효한 이메일을 입력해 주세요 (최대 30자) </div>
+        </div>
 
         <div class="d-flex justify-content-center">
+            <button id="editBt" type="button" class="btn btn-primary editBt">정보 수정</button>
             <button id="submitBt" type="submit" class="btn btn-primary"> 회원 수정</button>
         </div>
+
+        <!-- Oauth2 유저인지 확인-->
+        <input class="isOauth2" type="hidden" name="isOauth2" th:value="${isOauth2}">
+
+    </form>
+
+
+    <form th:if="${isOauth2 == 'true'}"
+          th:action="@{/member/edit/OAuth2}" action="/home" method="POST" th:object="${member}" id="oauth2Form" class="form">
+
+        <label for="oAuth2Provider">사용중인 소셜 로그인 서비스 </label>
+        <div class="input-wrapper">
+            <input type="text" id="oAuth2Provider" th:field="*{provider}" th:errorclass="is-invalid"
+                   placeholder="서비스 제공자" class="form-control">
+            <div class="invalid-feedback"> 내부 에러 </div>
+        </div>
+
+        <label for="email">이메일 </label>
+        <div class="input-wrapper">
+            <input type="text" id="oAuth2Email" th:field="*{email}" th:errorclass="is-invalid"
+                   placeholder="이메일을 입력해 주세요" class="form-control">
+            <div class="invalid-feedback"> 유효한 이메일을 입력해 주세요 </div>
+        </div>
+
+        <label for="username">닉네임 </label>
+        <div class="input-wrapper">
+            <input type="text" th:field="*{username}" id="oauth2Username" th:errorclass="is-invalid"
+                   placeholder="최대 20자 까지 허용합니다." class="form-control username editable">
+            <button class="duplicateUsernameCheckBt btn btn-secondary" type="button">
+                중복확인
+            </button>
+            <div class="valid-feedback"> 사용 가능한 닉네임 입니다.</div>
+            <div class="invalid-feedback"> 닉네임을 입력해 주세요 (최대 16 자)</div>
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <button id="oauth2EditBt" type="button" class="btn btn-primary editBt">정보 수정</button>
+            <button id="oauth2SubmitBt" type="submit" class="btn btn-primary"> 수정 완료</button>
+        </div>
+
+        <!-- Oauth2 유저인지 확인-->
+        <input class="isOauth2" type="hidden" name="isOauth2" th:value="${isOauth2}">
+        <input type="hidden" name="providerId" th:value="${member.getProviderId()}">
 
     </form>
 
