--- a/src/main/resources/templates/board/writeForm.html
+++ b/src/main/resources/templates/board/writeForm.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> 글쓰기 </title>
     <style>
+
+        #container {
+            max-width: 940px;
+        }
+
         #form label { display: block; }
 
         #form p {
