--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -28,6 +28,23 @@
             margin: 0 auto;
         }
 
+        #buttonBox button {
+            margin-right: 5px;
+        }
+
+        #oAuth2LoginBox {
+            margin-top: 20px;
+            text-align: center;
+            border-style: solid;
+            border-width: thin;
+            border-color: lightgrey;
+            border-radius: 10px;
+        }
+
+        #oAuth2LoginBox button {
+            margin-right: 5px;
+        }
+
 
 
     </style>
@@ -89,11 +106,20 @@
             <p class="field-error" th:text="${springSecurityErrorMessage}">로그인 오류 메시지</p>
         </div>
 
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-center" id="buttonBox">
             <button type="submit" class="btn btn-primary"> 로그인 </button>
             <button onclick="location.href='list.html'"
                     th:onclick="|location.href='@{/board/list}'|"
                     type="button" class="btn btn-primary">취소</button>
+        </div>
+        <div id="oAuth2LoginBox">
+            <span> 소셜 로그인 </span>
+            <div class="d-flex justify-content-center">
+                <button type="button" onclick="location.href='/oauth2/authorization/google'"
+                        class="btn btn-secondary"> 구글 </button>
+                <button type="button" onclick="location.href='/oauth2/authorization/google'"
+                        class="btn btn-secondary"> 네이버 </button>
+            </div>
         </div>
     </form>
 </div> <!-- /container -->
