--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>게시판</title>
     <style>
-        #container {
-            max-width: 940px;
-        }
 
         h1 {
             font-size: 3em;
@@ -40,12 +37,17 @@
             text-decoration: underline;
         }
 
+        #searchForm {
+            width: 360px;
+        }
+
     </style>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" th:href="@{/css/nav-css.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}" href="/static/css/global.css">
     <script>
         $(document).ready(function () {
             let searchForm = $("#searchForm");
@@ -111,7 +113,7 @@
 <!-- fixedTop nav 랑 안겹치게 하는 클래스 옵션 pt-5 로 padding-top 5 주면 되는데 더 높게하려면
         따로 지정해줘야 되는거 같아서 그냥 nav-css 에다가 60px 로 선언함-->
 <!--<body class="pt-5">-->
-<body>
+<body id="body">
 <div id="container" class="container">
 
     <nav th:replace="fragment/fragment.html :: nav-fragment">
@@ -200,7 +202,6 @@
 
     <!-- 검색창 -->
     <div class="row justify-content-center" style="clear:right;width:500px;margin:auto">
-        <div class="col-lg-12">
             <!-- th:action 태그는 javascript 를 통해 submit 할떄 적용되지 않는 것으로 보임 -->
             <!-- method = get 이므로 form 데이터가 queryString 에 붙어나감 -->
             <form id="searchForm" action="/board/list" method="get"
@@ -214,7 +215,6 @@
                 <input type="text" th:field="*{keyword}" name="keyword"/>
                 <button class="btn btn-primary btn-sm">검색</button>
             </form>
-        </div>
     </div>
 
     <!-- 검색 및 현재페이지 정보 -->
