--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -12,6 +12,10 @@
     <title>로그인</title>
     <style>
 
+        body {
+            background-color: #f7f7f7;
+        }
+
         /* 에러 발생시 추가할 클래스 */
         .field-error {
             border-color: #dc3545;
@@ -23,9 +27,15 @@
             margin: 30px auto;
         }
 
-        form {
+        #loginForm {
+            background-color: white;
             max-width: 520px;
             margin: 0 auto;
+            border-width: thin;
+            border-style: solid;
+            border-color: lightgrey;
+            padding: 20px;
+            border-radius: 10px;
         }
 
         #buttonBox button {
@@ -35,14 +45,33 @@
         #oAuth2LoginBox {
             margin-top: 20px;
             text-align: center;
-            border-style: solid;
-            border-width: thin;
+        }
+
+        #oAuth2LoginWrapper {
+            /*border-style: solid;*/
             border-color: lightgrey;
+            border-width: thin;
             border-radius: 10px;
         }
 
         #oAuth2LoginBox button {
-            margin-right: 5px;
+            margin-right: 20px;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        #oAuth2LoginBox button:hover {
+            border-style: solid;
+            border-color: lightgrey;
+            border-width: 2px;
+        }
+
+        #oAuth2LoginBox button:last-child {
+            margin-bottom: 0;
+        }
+
+        #naverLoginBt {
+
         }
 
 
@@ -75,14 +104,14 @@
     </script>
 </head>
 <body>
-<div class="container">
+<div id="container" class="container">
 
     <nav th:replace="fragment/fragment.html :: nav-fragment">
     </nav>
 
-    <form action="item.html" th:action="@{/loginProc}" th:object="${loginForm}" method="post" class="form">
+    <h2>로그인</h2>
 
-        <h2>로그인</h2>
+    <form id="loginForm" action="item.html" th:action="@{/loginProc}" th:object="${loginForm}" method="post" class="form">
 
         <div th:if="${#fields.hasGlobalErrors()}" id="globalError">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}"
@@ -107,18 +136,23 @@
         </div>
 
         <div class="d-flex justify-content-center" id="buttonBox">
-            <button type="submit" class="btn btn-primary"> 로그인 </button>
+            <button type="submit" class="btn btn-primary bg-gradient"> 로그인 </button>
             <button onclick="location.href='list.html'"
                     th:onclick="|location.href='@{/board/list}'|"
-                    type="button" class="btn btn-primary">취소</button>
+                    type="button" class="btn btn-primary bg-gradient">취소</button>
         </div>
         <div id="oAuth2LoginBox">
-            <span> 소셜 로그인 </span>
-            <div class="d-flex justify-content-center">
+            <div id="oAuth2LoginWrapper">
                 <button type="button" onclick="location.href='/oauth2/authorization/google'"
-                        class="btn btn-secondary"> 구글 </button>
-                <button type="button" onclick="location.href='/oauth2/authorization/google'"
-                        class="btn btn-secondary"> 네이버 </button>
+                        class="btn">
+                    <img th:src="@{/image/google_small.png}" src="/static/image/google_small.png" height="40px" alt="구글">
+                </button>
+                <button id="naverLoginBt" type="button" onclick="location.href='/oauth2/authorization/naver'" class="btn">
+                    <img th:src="@{/image/naver_small.png}" src="/static/image/naver_small.png.png" alt="네이버"  height="40px">
+                </button>
+                <button id="kakaoLoginBt" type="button" onclick="location.href='/oauth2/authorization/kakao'" class="btn">
+                    <img th:src="@{/image/kakao_small.png}" src="/static/image/kakao_small.png.png" alt="카카오"  height="40px">
+                </button>
             </div>
         </div>
     </form>
