--- a/src/main/resources/templates/fragment/fragment.html
+++ b/src/main/resources/templates/fragment/fragment.html
@@ -14,7 +14,7 @@
 
 <nav th:fragment="nav-fragment" class="navbar navbar-expand-md navbar-dark bg-primary bg-gradient fixed-top">
     <div class="container-fluid" id="navBarContainer">
-        <a class="navbar-brand text-light" href="/board/list" aria-current="page" id="header">게시판</a>
+        <a class="navbar-brand text-light" href="/board/list/all" aria-current="page" id="header">게시판</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
