--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -21,10 +21,18 @@
             font-size: 20px;
         }
 
+        #noneContent p {
+            padding: 30px;
+        }
+
         #write::after {display: block; content: none; clear: both}
 
         #write > button {
             float: right;
+        }
+
+        #content .category-label {
+            color: grey;
         }
 
         #content table a{
@@ -35,6 +43,10 @@
         #content a:hover {
             color: #0d6efd;
             text-decoration: underline;
+        }
+
+        #content .active a:hover {
+            color: white;
         }
 
         #searchForm {
@@ -71,10 +83,10 @@
                 searchForm.submit();
             })
 
-            // 페이지네이션 로그
+            // 페이지네이션 액티브를 위한 변수
             let currentPage = $("#pageInfo>input:first-child").attr("value");
             let startNum = $(".page-link-number:first-child").attr("data-pagenum");
-            console.log("curentPage = " + currentPage + " startNum = " + startNum)
+            // console.log("curentPage = " + currentPage + " startNum = " + startNum)
 
             // 페이지네이션 액티브
             if(currentPage != null) {
@@ -122,7 +134,7 @@
 
     <div id="noneContent" th:if="${boardList.isEmpty()}">
         <p>
-        <h3> 검색 결과가 없습니다. </h3>
+        <h3> 조회 결과가 없습니다. </h3>
         </p>
     </div>
 
@@ -154,14 +166,17 @@
                 <td id="boardNum" th:text="${item.id}">id</td>
                 <!--검색안함-->
                 <td th:if="${criteria.option == null}">
+                    <!-- if(Category == ALL) categoryCode = "" ;-->
+                    <span class="category-label" th:if="${pageMaker.categoryCode == 'all'}" th:text="${'[' + item.category.getCategoryName() + ']'}"></span>
                     <a id="readLink" href="list.html"
-                       th:href="@{|/board/read/${item.id}?currentPage=${currentPage}|}"
+                       th:href="@{|/board/read/${pageMaker.categoryCode}/${item.id}?currentPage=${currentPage}|}"
                        th:text="${item.title}">title</a>
                 </td>
                 <!--검색중-->
                 <td th:if="${criteria.option != null}">
+                    <span class="category-label" th:if="${pageMaker.categoryCode == 'all'}" th:text="${'[' + item.category.getCategoryName() + ']'}"></span>
                     <a id="readLink2" href="list.html"
-                       th:href="@{|/board/read/${item.id}?currentPage=${currentPage}&option=${criteria.option}&keyword=${criteria.keyword}|}"
+                       th:href="@{|/board/read/${pageMaker.categoryCode}/${item.id}?currentPage=${currentPage}&option=${criteria.option}&keyword=${criteria.keyword}|}"
                        th:text="${item.title}">title</a>
                 </td>
                 <td th:text="${item.writer}">writer</td>
@@ -183,17 +198,17 @@
     <div class="container">
         <ul class="pagination col justify-content-center" id="paginationContainer">
             <li class="page-item" th:if="${pageMaker.isPrevBt}">
-                <a th:href="@{|/board/list${pageMaker.getCategoryCode()}?currentPage=${(pageMaker.startPageNum)-1}|}"
+                <a th:href="@{|/board/list/${pageMaker.getCategoryCode()}?currentPage=${(pageMaker.startPageNum)-1}|}"
                    th:data-pageNum="${(pageMaker.startPageNum)-1}" class="page-link">&laquo;</a>
             </li>
             <!-- ${#numbers.sequence(from,to,[step])} 단순반복 numbers 유틸리티 클래스 배열 생성후 사용 -->
             <!--    <li th:each="num : ${#numbers.sequence(${pageMaker.startPageNum},${pageMaker.endPageNum})}">-->
             <li class="page-item page-item-number" th:each="num : ${#numbers.sequence(pageMaker.startPageNum, pageMaker.endPageNum)}">
-                <a th:href="@{|/board/list${pageMaker.getCategoryCode()}?currentPage=${num}|}" th:text="${num}" th:data-pagenum="${num}"
+                <a th:href="@{|/board/list/${pageMaker.getCategoryCode()}?currentPage=${num}|}" th:text="${num}" th:data-pagenum="${num}"
                    class="page-link page-link-number"> 페이지번호 </a>
             </li>
             <li class="page-item" th:if="${pageMaker.isNextBt()}">
-                <a th:href="@{|/board/list${pageMaker.getCategoryCode()}?currentPage=${pageMaker.endPageNum+1}|}"
+                <a th:href="@{|/board/list/${pageMaker.getCategoryCode()}?currentPage=${pageMaker.endPageNum+1}|}"
                    th:data-pageNum="${pageMaker.endPageNum+1}" class="page-link">&raquo;</a>
             </li>
         </ul>
@@ -202,7 +217,8 @@
 
     <!-- 글쓰기 버튼 -->
     <div class="float-right" id="write">
-        <button type="button" class="btn btn-primary"  th:onclick="|location.href='@{/board/write}'|">글쓰기</button>
+        <button type="button" class="btn btn-primary"
+                th:onclick="|location.href='@{/board/write/{categoryCode}(categoryCode=${criteria.getCategoryCode})}'|">글쓰기</button>
     </div>
 
     <!-- 검색창 -->
@@ -210,7 +226,7 @@
             <!-- th:action 태그는 javascript 를 통해 submit 할떄 적용되지 않는 것으로 보임 -->
             <!-- method = get 이므로 form 데이터가 queryString 에 붙어나감 -->
             <form id="searchForm" action="/board/list" method="get"
-                  th:action="@{|/board/list${pageMaker.getCategoryCode()}|}" th:object="${criteria}">
+                  th:action="@{|/board/list/${pageMaker.getCategoryCode()}|}" th:object="${criteria}">
                 <input type="hidden" name="currentPage" value="1">
                 <select th:field="*{option}" name="option">
                     <option value="">전체보기</option>
